# multi-lang-voice-agent

./: README.md  pyproject.toml  requirements.txt
app/: config.py  llm.py  main.py  stt.py  translate.py  tts.py
static/: index.html
